# nirvana-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  build.ps1  build_libcxx.ps1  build_libcxx.sh  build_libcxx_all.ps1  build_libm.ps1  build_libm.sh  build_nirvana.ps1  build_nirvana_all.ps1  build_olibm.ps1  build_olibm_all.ps1  build_tools.ps1  build_unwind.ps1  changelog.md  compile_idl.ps1  install_packages.ps1  install_packages_all.ps1  prepare.ps1  pull_llvm.ps1  readme.md  run_platforms.ps1  test.ps1  test_all.ps1  toolchain.cmake  unpack-tar-xz.ps1  vcpkg-configuration.json  vcpkg.json  vsdevshell.ps1
.github/workflows/: build.yml  create_release.yml
googletest/: CMakeLists.txt
nirvana/: CMakeLists.txt
nirvana/cmake/: NirvanaModule.cmake  NirvanaSDK.cmake  NirvanaTargetPlatform.cmake  nirvana.cmake
nirvana/triplets/: x64-nirvana.cmake  x86-nirvana.cmake
ports/nidl2cpp/: portfile.cmake
